test(#41): 과목 검색 API 테스트 추가 및 List.of null 버그 수정
Specification 조합 시 List.of(...)에 null 원소(필터 미적용 시 null을
반환하는 설계)가 들어가 NPE가 나던 걸 Arrays.asList로 수정.

필터 없음/keyword 부분일치/이수영역 OR+학년 AND 조합/범위 학년 매칭/
credits 4학점 이상 처리/CROSS_MAJOR 인정과목+이수구분 표시/
alreadyCompleted/페이지네이션 hasNext/잘못된 enum 400/미인증 401 테스트 추가.